--- a/Frontend/fashion/src/pages/blog/DropDiaries.css
+++ b/Frontend/fashion/src/pages/blog/DropDiaries.css
@@ -15,7 +15,7 @@ body, html {
   width: 100%;
   height: 66vh;
   min-height: 430px;
-  background: url('C:\Users\91984\Desktop\snippet-website\Frontend\fashion\public\images\AboutFinal.png') center/cover no-repeat; 
+  background: url('/public/images/AboutFinal.png') center/cover no-repeat; 
   display: flex;
   align-items: center;
   justify-content: center;
